--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>It works!</title>
+	<title>FLAH</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,700">
 	<style>
 	body {
@@ -11,7 +11,7 @@
 	}
 	.container {
 		position: absolute;
-		top: 50%;
+		top: 25%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 		text-align: center;
@@ -37,8 +37,8 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Your site is live!</h1>
-		<h2>Go grab a cold lemonade and celebrate.</h2>
+		<img src="/img/" width="640" height="360" />
+		<h2>FLAH slogan goes here!</h2>
 	</div>
 
 	<img class="logo" src="https://cloud.githubusercontent.com/assets/398893/16279177/af9b3622-386e-11e6-920e-3a3f33169831.png" width="150" alt="WeDeploy">
