--- a/web/index.html
+++ b/web/index.html
@@ -33,14 +33,26 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
+	.search-box {
+	    margin-top: 5%;
+	}
+	
+	.search-input {
+	    width: 60%;
+	    height: 45px;
+	    font-size: 18pt; 
+	}
 	</style>
 </head>
 <body>
 	<div class="container">
 		<img src="/img/" width="640" height="360" />
 		<h2>FLAH slogan goes here!</h2>
+	
+	    <div class="search-box">
+		<input class="search-input" />
+	    </div>
 	</div>
-
-	<img class="logo" src="https://cloud.githubusercontent.com/assets/398893/16279177/af9b3622-386e-11e6-920e-3a3f33169831.png" width="150" alt="WeDeploy">
+	
 </body>
 </html>
